@@ -1,0 +1,6 @@
+V3Hash,HashSHA1,FileName,FilePath,FileSize,HashSHA256,HashSHA384,HashSHA512
+B5E254DF3BB37EFCDFD883D69897770A,2CC793143BBE3BB8A2B9949B53583606885241E1,fccu-docprop-0.1.tar.gz,\,10429,,,
+044CF1145CEA5B9F2E1F31C5D4D8016C,E463CB8D316498CA7456683DA87B2C7924BCA117,fccu.evtreader.1.1.tar.gz,\,9559,,,
+E51313050E8F7D9E21C44F5EF13BC2F0,38D93B95BA824B1DA2787C16890F3023C1312107,tableau-parm-0.1.0.tar.gz,\,21638,,,
+0E838E1B10F91F867E9AE2D2FF6B10D6,E5EBC2727D692AE46E39B9E65A5FA797E913CECA,cdfs-2.6.23.tar.bz2,\,26197,,,
+C250D966FF3BF6594A16410B63429AF1,25B831E4DB3190D5613B768F50407BC5C7A9D6E1,md5deep-2.0.1-001.tar.gz,\,203211,,,
